--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.5.0",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "^2.5.7",
     "express": "~4.13.1",
+    "express-session": "^1.15.5",
     "jade": "~1.11.0",
+    "log4js": "^2.3.3",
     "morgan": "~1.6.1",
+    "mysql": "^2.14.1",
+    "nodemailer": "^4.0.1",
     "serve-favicon": "~2.3.0"
   }
 }
